--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:contact@ivanconsulting.ro" style="color:#9ba17b">contact@ivanconsulting.ro</a></p>
-    <p>Follow me on social media (links coming soon)!</p>
+    <p>Follow me on social media (links coming soon)</p>
   </section>
 
   <footer>
